<resources>
    <string name="app_name">昆明公交发车屏</string>
    <!--<string name="company_info_str">昆明公交集团发车信息</string>-->


    <string name="message_device_id_not_correct">设备地址不能为空！</string>
    <string name="message_port_not_correct">"端口号输入有误，应该小于65535！</string>
    <string name="message_receive_empty_data">接收到的数据为空！</string>
    <string name="message_weather_interval_not_correct">获取天气时间间隔必须大于0！</string>

    <string name="ad_content_str_default">助人为乐,服务大家！</string>

    <string name="version">软件版本：%1$s</string>
    <string name="device_id">设备地址：%1$s</string>
    <string name="server_address">服务器地址：%1$s</string>
    <string name="server_port">服务器端口：%1$d</string>
    <string name="server_connecting">正在连接服务器：地址：%1$s 端口：%2$d</string>
    <string name="server_connected">服务器连接成功 地址：%1$s 端口：%2$d</string>
    <string name="server_disconnected">服务器已经断开 地址：%1$s 端口：%2$d</string>
    <string name="receive_data">接收字节数：%1$d</string>

    <string name="default_line_name">- - - -</string>
    <string name="default_line_num">- - - -</string>
    <string name="default_time">- -:- -</string>
    <string name="time_separator">:</string>

    <!--天气-->
    <string name="city">昆明</string>
    <string name="city_en">kunming</string>
    <string name="air_quality">空气质量 %1$s</string>
    <string name="pm_10">PM10 %1$s</string>
    <string name="pm_25">PM2.5 %1$s</string>
    <string name="cond">昼 %1$s 夜 %2$s</string>
    <string name="temperature">%1$s℃/%2$s℃</string>
    <string name="wind">%1$s</string>
    <string name="suggestion">%1$s</string>
    <string name="weather">空气质量 %1$s PM2.5 %2$s PM10 %3$s 昼 %4$s 夜 %5$s %6$s℃/%7$s℃ %8$s</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="modify_suggestion">修改天气提示语</string>
    <string name="delete_suggestion">删除此天气提示语</string>
    <string name="message_save_success">保存成功</string>
    <string name="message_save_failed">保存失败</string>
    <string name="button_add">添加</string>
    <string name="suggestion_edit_info">提示：点击提示语进行修改， 长按提示语进行删除</string>

    <!--设置-->
    <string name="label_item_num">显示车辆数</string>
    <string name="label_item_scroll_interval">数据滚动周期</string>
    <string name="label_bus_info_text_size">车辆信息字体大小</string>
    <string name="label_line_interval">每条线路显示时间（秒）</string>
    <string name="label_title_text_size">标题字体大小</string>
    <string name="label_title">标题</string>
    <string name="label_ad_text_size">宣传语字体大小</string>
    <string name="label_ad">宣传语</string>
    <string name="label_device_id">设备ID</string>
    <string name="button_settings">设置</string>
    <string name="button_test">测试</string>
    <string name="button_suggestion">修改天气提示语</string>
    <string name="button_finish">完成</string>
    <string name="button_preview">预览</string>
    <string name="label_weather_interval">更新天气时间间隔（分钟）</string>


    <string name="message_copy_file_success">更新文件成功</string>
    <string name="message_copy_file_failed">复制文件失败:%1$s"</string>
</resources>
