<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical">


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/suggestion_edit_info"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_suggestion"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </android.support.v7.widget.RecyclerView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_add"
            android:text="@string/button_add"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/button_finish"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/button_finish"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
