<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/item_background_1"
    android:orientation="vertical"
    android:layout_margin="0dp"

    >

    <LinearLayout
        android:id="@+id/layout_bus_info_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/text_view_name"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/default_line_name"
            android:gravity="center"/>


        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            >
            <com.changfeng.tcpdemo.widget.MultiScrollNumber
                style="@style/BusInfo"
                android:id="@+id/scroll_number_num"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/text_view_default_num"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/default_line_num"
                android:gravity="center"/>

        </FrameLayout>


        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            >


            <LinearLayout
                android:id="@+id/layout_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:gravity="center">

                <com.changfeng.tcpdemo.widget.MultiScrollNumber
                    style="@style/BusInfo"
                    android:id="@+id/scroll_number_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/text_view_time_separator"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/time_separator" />

                <com.changfeng.tcpdemo.widget.MultiScrollNumber
                    style="@style/BusInfo"
                    android:id="@+id/scroll_number_minute"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center" />

            </LinearLayout>

            <TextView
                android:gravity="center"
                android:id="@+id/text_view_default_time"
                android:text="@string/default_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>


    </LinearLayout>




    <!--<android.support.v7.widget.CardView-->
        <!--android:visibility="gone"-->
        <!--android:id="@+id/card_view_item"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--&gt;-->

        <!--<LinearLayout-->
            <!--android:id="@+id/layout_item_background"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:orientation="vertical"-->
            <!--&gt;-->

      <!---->

        <!--</LinearLayout>-->

    <!--</android.support.v7.widget.CardView>-->
    <!--&lt;!&ndash;<android.support.v7.widget.CardView&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_height="5dp"&ndash;&gt;-->
        <!--&lt;!&ndash;app:cardBackgroundColor="#33FFFFFF"&ndash;&gt;-->
        <!--&lt;!&ndash;&gt;&ndash;&gt;-->

    <!--&lt;!&ndash;</android.support.v7.widget.CardView>&ndash;&gt;-->

</LinearLayout>
